--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -1,3 +1,3 @@
-sewtotaleye:bunnies=Plushie Bunnies 
-sewtotaleye:heads=Plushie Heads 
-sewtotaleye:zombies=Plushie Zombies
+totallyplush:bunnies=Plushie Bunnies 
+totallyplush:heads=Plushie Heads 
+totallyplush:zombies=Plushie Zombies
