--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -1,3 +1,5 @@
 totallyplush:bunnies=Plushie Bunnies 
 totallyplush:heads=Plushie Heads 
 totallyplush:zombies=Plushie Zombies
+
+item.totally_plush:han_solos_vest=Han Solos Vest
